[package]
name = "practice-chinese"
version = "0.2.0"
edition = "2021"
authors = ["Jiaqi Wang"]
description = "A tool to practice Chinese."
license = "MIT"
repository = "https://github.com/Chachi04/practice-chinese"


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
serde_json = "1.0.140"
rand = "0.9.0"
crossterm = "0.28.1"
